FinalFantasyTacticsPartyBuilder/Content/Site.css
/* ... */
.job-ability-level {
    margin-left: 5%;
    width: 10%;
    float: left;
}

.job-ability-jp {
    margin-left: 5%;
    width: 30%;
    float: left;
}

    .job-ability-jp img {
        width: 30px;
        height: 30px;
    }

.job-ability-header {
    margin-top:-1%;
    float:left;
}

#ability-job-selection .fft-cell {
    text-align: left;
}

#ability-job-selection .fft-column:nth-child(-n+3) {
    margin-top:2%
}

#ability-job-selection .fft-column:nth-child(n-3) {
    margin-bottom:2%
}

.job-ability-name .fft-cell:hover {
    cursor:pointer;
}

.job-ability-name .fft-cell:hover {
    position: relative;
    cursor: pointer;
}

.job-ability-name .fft-cell:hover:before {
    content: url(Images/menu_cursor.png);
    position: absolute;
    left: -35px;
    bottom: 5px;
}

#ability-details-container {
    display: normal;
    position: absolute;
    top: 15%;
    left: 10%;
    width: 80%;
    height:70%;
    max-width: 1600px;
    max-height: 1200px;
    z-index: 1;
    outline: solid 400px rgba(0, 0, 0, 0.50);
}

#ability-details-job-container {
    height:15%;
    margin-top:1%;
    margin-bottom:1%;
}

#ability-details-job-container {
    height:15%;
    margin-bottom:2%;
}


#ability-details-close {
    position: absolute;
    padding: 5px;
    top: 1%;
    right: 1%;
    border: outset 2px;
}

#ability-details-job-selection {
    padding:1% 0;
    height:70%;
}

#ability-details-job-selection .fft-cell {
    text-align:left;
}

#ability-details-action-bar-container .fft-column {
    float:left;
    margin-left:2%;
    margin-top:-2%;
    width:10%;
}

#ability-details-action-bar-container .fft-column .fft-cell {
    width:100%;
    max-width:40px;
    max-height:50px;
    min-height:25px;
}

#ability-details-action-bar-container .fft-column:first-of-type .fft-cell {
    max-width:100px;
    max-height:40px;
}

#ability-details-ability-selection {
    width: 100%;
}

@media screen and (max-width: 600px) and (min-width: 300px) {
    .menu {
        font: 10vw 'Altima';
    }

    .unit-container {
        position: relative;
        float: left;
        width: 80%;
        margin-left:15%;
        margin-bottom:5%;
    }

    .job-status-container {
    width: 100%;
    height: 40%;
}

.job-status-hp-container, .job-status-mp-container  {
    position: relative;
    margin-left:20%;
    height: 50%;
    width: 80%;
}

.menu-container {
    position:absolute;
    left:0;
    top:10%;
    width: 55%;
    height: auto;
    z-index: 10;
}

}

